# JUCESinglePluginCMake

./: CMakeLists.txt
Source/: PluginProcessor.h
